# glsl_compiler

./: Cargo.toml  README.md  shell.nix
shaders/: test.glsl  test_include.glsl  test_include_include1.glsl  test_include_include2.glsl  test_include_include3.glsl  test_profile.glsl
src/: lib.rs  profiler.rs
tests/: lib.rs
