[package]
name = "glsl_compiler"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/MaartenBehn/glsl_compiler"
readme = "README.md"
keywords = ["vulkan", "shader", "glsl", "sqriv", "marco"]
description = "Write GLSL Code directly in a marco!"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
shaderc = "0.8.3"
proc-macro2 = { version = "1.0.89"}